# jamrl

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/jamcore/: cell_list.hpp  env.hpp  evaluate.hpp  hessian.hpp  lbfgs.hpp  mlp.hpp  moduli.hpp  rollout.hpp  system.hpp  types.hpp
cpp/src/: env.cpp  evaluate.cpp  hessian.cpp  lbfgs.cpp  moduli.cpp  rollout.cpp  system.cpp
docs/: physics.md
docs/plans/: agent_action_expansion.md  jamrl_hpc_implementation_plan.md
docs/wiki/: 01-concepts.md  02-cli-reference.md  03-running-campaigns.md  04-analysis.md  05-recipes.md  06-environment-and-building.md  README.md
notebooks/: 01_training_curves.ipynb  02_policy_evolution.ipynb  03_vdos_evolution.ipynb  04_mechanical_distributions.ipynb  05_action_obs_distributions.ipynb  folder_creation.py
scripts/: backfill_postprocess.sh  build.sh  pull_campaigns.py
src/jamrl/: __init__.py  analyze.py  campaign_analysis.py  cem.py  cli.py  config.py  learn.py  policy.py  postprocess.py  ppo.py  rollout.py  seeding.py  slurm.py  staging.py  storage.py  torch_backend.py
src/jamrl/templates/: learn.sbatch.j2  postprocess.sbatch.j2  rollout.sbatch.j2
tests/: conftest.py  test_cells.py  test_env.py  test_evaluate.py  test_hessian.py  test_lbfgs.py  test_learner.py  test_moduli.py  test_postprocess.py  test_reward_modes.py  test_rollout.py  test_slurm.py  test_staging.py  test_storage.py  test_vdos_moves.py
