[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "jamrl"
version = "0.1.0"
description = "Distributed RL of box-control jamming protocols (C++ core + PyTorch learner + SLURM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "h5py>=3.10",
    "pandas>=2.1",
    "pyarrow>=14",
    "pyyaml>=6",
    "matplotlib>=3.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# The learner uses a self-contained NumPy backend (the plan specifies PyTorch;
# pip-torch conflicts fatally with OpenMP/MKL in some anaconda envs and the MLPs
# are tiny). Install the torch extra if you want a torch backend on a clean env.
torch = ["torch>=2.1"]
dev = ["pytest>=8", "pybind11>=2.11", "scikit-build-core>=0.8", "ninja>=1.11", "cmake>=3.21"]

[project.scripts]
jamrl = "jamrl.cli:main"

[tool.scikit-build]
cmake.version = ">=3.21"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/jamrl"]
# Pass options through to CMake; tweak from the environment with SKBUILD_CMAKE_ARGS.
cmake.args = []

[tool.scikit-build.cmake.define]
JAMRL_NATIVE = "ON"
JAMRL_USE_SPECTRA = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: longer-running end-to-end training tests"]
